--- a/style/style.css
+++ b/style/style.css
@@ -12,9 +12,14 @@
     background-size: cover;
 }
 
-.is-child {
+.box {
     background-color: transparent;
     border: 3px black solid
+}
+
+.box:hover{
+    background-color: black;
+    cursor: pointer;
 }
 
 #contact {
