--- a/style/style.css
+++ b/style/style.css
@@ -1,20 +1,54 @@
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'PT Serif Caption', serif;
+}
+
 .navbar-dropdown {
     background-color: black;
 }
 
+.navbar-link:not(.is-arrowless)::after {
+    border-color: rgba(255,255,255,.7);
+}
+
+.title, .subtitle {
+    color: rgba(255,255,255,.7) !important;
+}
+
 #main  {
+    height: 100vh;
     background-image: url("burger-main.jpg");
     background-size: cover;
 }
 
+.home-shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.15);
+  }
+  
+
 #menu {
+    height: 100vh;
     background-image: url("donuts.jpg");
     background-size: cover;
 }
 
+#main-title {
+    font-size: 8vh;
+}
+
+#main-subtitle {
+    font-size: 6vh;
+}
+
 .box {
     background-color: transparent;
-    border: 3px black solid
+    border: 3px solid rgba(255,255,255,.7);
 }
 
 .box:hover{
@@ -23,11 +57,30 @@
 }
 
 #contact {
+    height: 100vh;
     background-image: url("drinks.jpg");
     background-size: cover;
+}
+
+#contact-data {
+    margin-top: 5%;
+}
+
+#contact-data a {
+    color: rgba(255,255,255,.7);
 }
 
 .footer {
     padding: 1.5rem;
     background-color: transparent;
+}
+
+.social {
+    cursor: pointer;
+}
+
+.social a {
+    margin-right: 10px;
+    color: rgba(255,255,255,.7);
+    font-size: 200%;
 }
